--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 		</dependency>
 		<!-- Lombok Dependency -->
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
